[package]
name = "rougelike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rltk = { version = "0.8.7", features = ["serde"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
specs = { version = "0.19.0", features = ["serde"] }
specs-derive = "0.4.1"
